# py-dynamic-import

./: README.md  pyproject.toml
dynamic-import/: importer.py
dynamic_import/: importer.py
tests/: test_importer.py
