[tool.poetry]
name = "dynamic-import"
version = "1.0"
description = "Python package for working with modules that can be created and changed at runtime."
authors = ["Andreas Tollkötter <tollkoetter.andreas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
